--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.6.1",
+    "mongoose": "^8.15.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
