--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
-    "express": "~4.16.1",
+    "express": "~4.18.2",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "helmet": "^8.1.0",
-    "http-errors": "~1.6.3",
+    "http-errors": "~2.0.0",
     "luxon": "^3.6.1",
-    "mongoose": "^8.15.0",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "mongoose": "^8.1.0",
+    "morgan": "~1.10.0",
+    "pug": "^3.0.2",
+    "source-map": "^0.7.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.3"
   }
 }
